--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.6",
+    "react-gsap": "^1.2.0",
     "react-helmet": "^5.2.1",
     "react-kawaii": "^0.12.0",
     "react-responsive-carousel": "^3.1.49",
