--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "husky": "^2.3.0",
     "jsdoc": "^3.6.2",
     "react": "^16.8.6",
+    "react-background-image": "^1.2.0",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.6",
     "react-gsap": "^1.2.0",
