--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-helmet": "^5.2.1",
     "react-image": "^2.1.2",
     "react-kawaii": "^0.12.0",
+    "react-pose": "^4.0.8",
+    "react-pose-text": "^3.1.0",
     "react-responsive-carousel": "^3.1.49",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
