--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "apollo-boost": "^0.4.2",
+    "dotenv-cli": "^2.0.0",
+    "graphql": "^14.3.1",
     "husky": "^2.3.0",
     "jsdoc": "^3.6.2",
     "react": "^16.8.6",
+    "react-apollo": "^2.5.6",
     "react-background-image": "^1.2.0",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.6",
@@ -30,6 +34,7 @@
     "pretty-quick": "1.10.0"
   },
   "scripts": {
+    "test_prod": "dotenv react-scripts start",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
