--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^16.8.6",
     "react-gsap": "^1.2.0",
     "react-helmet": "^5.2.1",
+    "react-icons": "^3.7.0",
     "react-image": "^2.1.2",
     "react-kawaii": "^0.12.0",
     "react-pose": "^4.0.8",
@@ -25,7 +26,6 @@
     "react-responsive-carousel": "^3.1.49",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
-    "react-web-vector-icons": "^1.0.2",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.84.0",
     "styled-components": "^4.2.0",
